fix align footer

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -86,7 +86,6 @@
   }
 	
   @include large {
-    padding: 2rem 6rem;
     font-size: 1.1rem;
   }
 
@@ -102,8 +101,11 @@
 }
 
 .page-footer-inner {
-	max-width: 64rem;
-	margin: auto;
+	@include large {
+		max-width: 64rem;
+		margin: auto;
+		padding: 2rem 6rem;
+	}
 	
 	h1 {
 		font-size: 1.375rem;
